# audio_ai_pipeline

./: .gitignore  README.md  vad_stt_tts
pipeline_module/: CMakeLists.txt  README.md  bin_export_npy.py  build_rk3588-aarch64.sh  build_rk3588-arm32.sh  build_x86.sh  dataset.txt  diarization_output.txt  embedding_cluster.py  plot_seg.py
pipeline_module/cmake/: onnxruntime-linux-x86_64.cmake  sentencepiece.cmake
pipeline_module/python_script/: embedding_cluster.py  modify_onnx_model_name.py  plot_seg.py
pipeline_module/src/: CMakeLists.txt  kws_stt_online.h  kws_stt_tts_online.cc  kws_stt_tts_online.h  speaker_change.cc  speaker_change.h  speaker_change_id_base.cc  speaker_change_id_base.h  speaker_diary.cc  speaker_diary_simple.cc  speaker_diary_simple.h  speaker_diary_simple_wav_chunk.cc  speaker_segment_chunk.cc  speaker_track.cc  speaker_track.h  speaker_vad_chunk.cc  speaker_vad_chunk.h  vad_speaker_diarization_offline_wav.cc  vad_speaker_diarization_online.cc  vad_stt_online.cc  vad_stt_online.h  vad_stt_tts.cc  vad_stt_tts.h
pipeline_module/src/ai_engine/: ai_engine.cc  ai_engine.h
pipeline_module/src/aivad/: ai_vad.h
pipeline_module/src/alsa/: alsa_cq_buffer.cc  alsa_cq_buffer.h
pipeline_module/src/fft/: kiss_fft.h  kiss_fftr.c
pipeline_module/src/kws/: kws.h  kws_engine.h
pipeline_module/src/litevad/include/: ai_vad.h  litevad_api.h
pipeline_module/src/sherpa_stt/: base64-decode.cc  cat.cc  circular-buffer.cc  hypothesis.cc  offline-lm.cc  offline-model-config.cc  offline-model-config.h  offline-paraformer-greedy-search-decoder.cc  offline-paraformer-greedy-search-decoder.h  offline-paraformer-model-config.cc  offline-paraformer-model-config.h  offline-paraformer-model.cc  offline-paraformer-model.h  offline-recognizer-impl.cc  offline-recognizer-impl.h  offline-recognizer-paraformer-impl.h  offline-recognizer-transducer-impl.h  offline-recognizer-whisper-impl.h  offline-recognizer.cc  offline-recognizer.h  offline-stream.cc  offline-stream.h  offline-transducer-decoder.h  offline-transducer-greedy-search-decoder.h  offline-transducer-model-config.cc  offline-transducer-model.cc  offline-transducer-modified-beam-search-decoder.cc  offline-transducer-modified-beam-search-decoder.h  offline-whisper-greedy-search-decoder.cc  offline-whisper-greedy-search-decoder.h  offline-whisper-model-config.cc  offline-whisper-model-config.h  offline-whisper-model.cc  offline-whisper-model.h  parse-options.cc  session.cc  session.h  sherpa_stt.cc  sherpa_stt.h  silero-vad-model-config.cc  (+19 more)
pipeline_module/src/speaker_diarization/: speaker_diarization.h
pipeline_module/src/speaker_diarization/clustering/: clustering.cpp  speaker_cluster.h
pipeline_module/src/speaker_diarization/embedding/: speaker_embedding.cc  speaker_embedding.h
pipeline_module/src/speaker_diarization/frontend/: speaker_help.h
pipeline_module/src/speaker_diarization/onnxModel/: onnx_model.cc
pipeline_module/src/speaker_diarization/segmentation/: speaker_seg.cc  speaker_seg.h
pipeline_module/src/speaker_id/: CMakeLists.txt
pipeline_module/src/speaker_id/frontend/: feature_pipeline.h  wav.h
pipeline_module/src/speaker_id/speaker/: onnx_speaker_model.cc  onnx_speaker_model.h  rknn_speaker_model.cc  rknn_speaker_model.h  speaker_engine.cc  speaker_engine.h
pipeline_module/src/speaker_id/utils/: utils.cc
pipeline_module/src/tts/include/: piper.h  tts.h
pipeline_module/src/wav/: wavfile.hpp
sherpa-onnx/: aarch64-linux-gnu.toolchain.cmake  build_x86.sh  enroll_embeddings.json  hotwords.txt  hotwords_token.txt  sid.txt  vad_stt_tts
sherpa-onnx/src/: CMakeLists.txt  kws_stt_online.cc  speaker_diary.cc  speaker_diary.h  speaker_id.cc  speaker_id.h  vad_stt_online.cc
sherpa-onnx/src/alsa/: alsa_cq_buffer.cc
sherpa-onnx/src/kws/: kws.cpp  kws_engine.cpp
sherpa-onnx/src/litevad/src/: litevad_api.c
sherpa-onnx/src/sherpa_stt/: features.cc  features.h  file-utils.cc  file-utils.h  log.cc  offline-lm.h  offline-model-config.cc  offline-model-config.h  offline-recognizer.cc  offline-recognizer.h  offline-rnn-lm.cc  offline-rnn-lm.h  offline-stream.cc  offline-stream.h  offline-transducer-greedy-search-decoder.cc  offline-transducer-model-config.h  offline-transducer-model.h  onnx-utils.cc  packed-sequence-test.cc  pad-sequence-test.cc  parse-options.cc  parse-options.h  session.h  sherpa-onnx-offline.cc  slice-test.cc  symbol-table.cc  symbol-table.h  text-utils.cc  unbind.cc
sherpa-onnx/src/speaker_diarization/: speaker_diarization.h
sherpa-onnx/src/speaker_diarization/clustering/: cluster  cluster.cpp
sherpa-onnx/src/speaker_diarization/embedding/: speaker_embedding.cc  speaker_embedding.h
sherpa-onnx/src/speaker_diarization/frontend/: speaker_help.h  wav.h
sherpa-onnx/src/speaker_diarization/onnxModel/: onnx_model.cc  onnx_model.h
sherpa-onnx/src/speaker_diarization/segmentation/: speaker_seg.h
sherpa-onnx/src/speaker_id/: CMakeLists.txt
sherpa-onnx/src/speaker_id/frontend/: fbank.h  feature_pipeline.cc
sherpa-onnx/src/speaker_id/speaker/: CMakeLists.txt  onnx_speaker_model.cc  onnx_speaker_model.h  speaker_engine.cc  speaker_model.h
sherpa-onnx/src/speaker_id/utils/: CMakeLists.txt
sherpa-onnx/src/tts/: piper.cpp  tts.cc
